# Post-Processed-Fair-Predictors

./: .gitignore  README.md  post_processed_fair_predictors.ipynb  pyproject.toml  real_data_analysis.ipynb  requirements.txt  setup.py  simulations.ipynb
counterfactualEO/counterfactualEO/: functions_estimation.py
counterfactualEO/counterfactualEO/tests/: test_values2.pickle
notebooks/: post_processed_fair_predictors2.ipynb  real_data_analysis.ipynb
src/counterfactualEO/: __init__.py  functions_estimation.py  functions_evaluation.py  functions_plot.py  functions_plotting.py  functions_simulation.py  utils.py
src/counterfactualEO/counterfactualEO/: functions_estimation.py  functions_simulation.py
src/counterfactualEO/counterfactualEO/tests/: test_data.csv
tests/: conftest.py  context.py  test_estimation.py  test_functions_estimation.py  test_functions_evaluation.py  test_functions_simulations.py  test_values1.pickle
