[project]
name = "counterfactualEO"
version = "0.1"
description = "Post-process binary predictors to satisfy counterfactual equalized odds."
authors = [
    { name = "Alan Mishler", email = "contact@alanmishler.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy<2",
    "scipy>=1.10,<2.0",
    "osqp>=0.6.3",
    "cvxpy[ecos]>=1.4.1",
    "pandas",
    "seaborn",
    "scikit-learn",
    "tqdm"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

